2009-03-26  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* lib/PandoraFMS/Tools.pm: Added Apple to the detected OS'es
	
	* bin/pandora_recon: Added TCP scanning if ICMP fails to more accurately
	detect systems that are firewalled from pings.
	
2009-03-05  Sancho Lerena <slerena@artica.es>

	* bin/pandora_network: Better management of snmpget binary call, using
	a config setup variable and checking it in startup.
	
	* pandora_server.conf: new options added (snmpget, UDP multicast)
	
	* Config.pm: New options managed (snmpget), new version updated (3.0-dev)
	
	* DB.pm: Fixed two issues that makes me some problems on undefined values.
	
	* Tools.pm: New function to manage numerical data.
	
	* util/plugin/multicast.pl: Fixed plugin for multicast check.
	
2009-03-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Fixed alert recovery custom fields.
	  field3_recovery was not being properly set.

2009-02-20  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* bin/pandora_snmpconsole: Fixed SNMP console going down while 
	waiting on snmpd

	* lib/PandoraFMS/DB.pm: Fixed language from going_down_normal to
	going_up_normal and going_up_critical to going_down_critical

2009-02-11  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* bin/pandora_server: Fixed Data server. Wouldn't start because of 
	mismatched arguments.	

2009-02-11  Sancho Lerena <slerena@artica.es>

        * bin/pandora_network: Restored lock for icmp / ping calls.

2009-02-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Combined alerts are working again.

	* bin/pandora_snmpconsole: Moved calcula_alerta_snmp to DB.pm so it
	  can be called from other modules.

2009-02-10  Sancho Lerena <slerena@artica.es>

	* bin/pandora_network: An important BUG discovered in SNMP call locking
	mechanism. Now calls to SNMP are using exec to snmpget command. Much  
	faster due solved locking problems.

2009-02-06  Sancho Lerena <slerena@artica.es>

	* util/plugin/multicast.pl: Multicast check plugin.  
